--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# Site settings
+﻿# Site settings
 title: Hossein Karami | حسین کرمی
 email: hi@hosseinkarami.com
 description: توسعه‌دهنده رابط کاربری
@@ -13,3 +13,4 @@ permalink: pretty
 paginate: 5
 paginate_path: "blog/page:num/"
 exclude: ["node_modules", "gulpfile.js", "package.json"]
+encoding: utf-8
