--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Javad Elmi | جواد علمی
 email: hi@hosseinkarami.com
 description: دانشجوی مهندسی کامپیوتر
 baseurl: "http://elmi-javd.ir/"
-url: "http://hosseinkarami.com"
+url: "http://elmi-javd.ir"
 twitter: _Karamii
 github:  elmi-javad
 behance: elmi-javad
