--- a/assets/bower.json
+++ b/assets/bower.json
@@ -6,7 +6,7 @@
   ],
   "description": "My Polymer Experiment",
   "license": "MIT",
-  "homepage": "http://hosseinkarami.com",
+  "homepage": "http://elmi-javad.ir",
   "private": true,
   "ignore": [
     "**/.*",
