--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Javad Elmi | جواد علمی
 email: hi@hosseinkarami.com
 description: دانشجوی مهندسی کامپیوتر
-baseurl: "http://hosseinkarami.com/"
-url: "http://elmi-javd.ir"
+baseurl: "http://elmi-javad.ir/"
+url: "http://elmi-javad.ir"
 twitter: _Karamii
 github:  elmi-javad
 behance: elmi-javad
