--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -2,6 +2,6 @@
   name: فناوری اطلاعات
   color: '#3498db'
   
-- slug: programming
-  name: Programming
+- slug: عمومی
+  name: عمومی
   color: '#1abc9c'
