--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -1,7 +1,7 @@
-- slug: فناوری اطلاعات
+- slug: IT
   name: فناوری اطلاعات
   color: '#3498db'
   
-- slug: عمومی
+- slug: general
   name: عمومی
   color: '#1abc9c'
