--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 ﻿# Site settings
-title: Javad Elmi | جواد علمی
+title: فاطمه زنگوئی|Fatemeh zngouie
 email: hi@hosseinkarami.com
 description: دانشجوی مهندسی کامپیوتر
-baseurl: "http://elmi-javad.ir/"
-url: "http://elmi-javad.ir"
+baseurl: "http://fzangouie.ir/"
+url: "http://fzangouie.ir"
 twitter: _Karamii
 github:  elmi-javad
 behance: elmi-javad
